<resources>
    <string name="app_name">MyFamily</string>
    <string name="sos_head">SOS</string>
    <string name="guard_head">Guard</string>
    <string name="sos_text">Please send message to my family i in trouble</string>
    <string name="guard_text">I am guarding you in any trouble</string>
    <string name="security">Security</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>